Add contact page url

--- a/mitx/lms/templates/footer.html
+++ b/mitx/lms/templates/footer.html
@@ -32,7 +32,7 @@
         <ul>
           <li class="list-title">${_("Connect")}</li>
           <li>
-            <a href="mailto:&#109;&#105;&#116;&#111;&#108;&#108;&#045;&#115;&#117;&#112;&#112;&#111;&#114;&#116;&#064;&#109;&#105;&#116;&#046;&#101;&#100;&#117;">${_("Contact")}</a>
+            <a href="${marketing_link('CONTACT')}">${_("Contact")}</a>
           </li>
           <li>
             <a href="https://twitter.com/mitopenlearning?lang=en" target="_blank">${_("Twitter")}</a>
