--- a/mitx/lms/templates/header/navbar-not-authenticated.html
+++ b/mitx/lms/templates/header/navbar-not-authenticated.html
@@ -25,7 +25,7 @@ from six import text_type
       <ul class="custom-nav mobile-nav-item hidden-mobile nav-item">
           <li><a href="${marketing_link('COURSES')}">${_("Courses")}</a></li>
           <li><a href="${marketing_link('ABOUT')}">${_("About")}</a></li>
-          <li><a href="mailto:&#109;&#105;&#116;&#111;&#108;&#108;&#045;&#115;&#117;&#112;&#112;&#111;&#114;&#116;&#064;&#109;&#105;&#116;&#046;&#101;&#100;&#117;">${_("Contact")}</a></li>
+          <li><a href="${marketing_link('CONTACT')}">${_("Contact")}</a></li>
       </ul>
       % if allows_login:
         % if restrict_enroll_for_course:
