Add course instructor tab styling.

--- a/mitx/lms/static/sass/lms-main-v2.scss
+++ b/mitx/lms/static/sass/lms-main-v2.scss
@@ -39,6 +39,7 @@ $pattern-library-path: '../../edx-pattern-library' !default;
 @import 'course/course-details';
 @import 'course/course-sidebar';
 @import 'course/layout/courseware_preview';
+@import 'course/layout/course-instructor-tab';
 
 // multicourse
 @import 'multicourse/dashboard';
