Email template logo test.

--- a/mitx/lms/templates/ace_common/edx_ace/common/base_body.html
+++ b/mitx/lms/templates/ace_common/edx_ace/common/base_body.html
@@ -59,7 +59,7 @@
                     <tr>
                         <td width="70">
                             <a href="{% with_link_tracking homepage_url %}"><img
-                                    src="https://openlearninglibrary.mit.edu/static/mitx/images/logo.e73ea2d64518.svg" width="260"
+                                    src="https://placehold.it/260x32" width="260"
                                     height="33" alt="{% blocktrans %}Go to {{ platform_name }} Home Page{% endblocktrans %}"/></a>
                         </td>
                         <td align="right" style="text-align: {{ LANGUAGE_BIDI|yesno:"left,right" }};">
