--- a/mitx/lms/static/sass/_overrides.scss
+++ b/mitx/lms/static/sass/_overrides.scss
@@ -58,6 +58,13 @@
     }
 }
 
+#banner-msg {
+
+    p {
+        margin: 0;
+    }
+}
+
 // ------------------------------
 // #DEVELOPERS
 // ------------------------------
