--- a/mitx/lms/templates/learner_profile/learner_profile.html
+++ b/mitx/lms/templates/learner_profile/learner_profile.html
@@ -26,15 +26,7 @@ from openedx.core.djangolib.markup import HTML
     <div class="wrapper-profile">
         <div class="profile ${'profile-self' if own_profile else 'profile-other'}">
             <div class="profile-visibility-bar">
-                <div class="wrapper-profile-field-account-privacy">
-                    % if own_profile and records_url:
-                        <div class="wrapper-profile-records">
-                            <a href="${records_url}">
-                                <button class="btn profile-records-button">${_("View My Records")}</button>
-                            </a>
-                        </div>
-                    % endif
-                </div>
+                <div class="wrapper-profile-field-account-privacy"></div>
             </div>
             % if own_profile:
                 <div class="profile-header-container">
