--- a/mitx/lms/templates/static_templates/contact.html
+++ b/mitx/lms/templates/static_templates/contact.html
@@ -15,6 +15,13 @@
 
 <main id="main" aria-label="Content" tabindex="-1">
     <section class="container contact-page-content">
+
+        <hr>
+        <h1>
+            <a class="abc" target="_blank" href="/about#faq-section">asdfasdfFAQ link</a>
+        </h1>
+        <hr>
+
         <p>Find answers to your questions.
             <a href="mailto:&#109;&#105;&#116;&#111;&#108;&#108;&#045;&#115;&#117;&#112;&#112;&#111;&#114;&#116;&#064;&#109;&#105;&#116;&#046;&#101;&#100;&#117;">Contact our Help Center</a>
         </p>
