--- a/mitx/lms/templates/static_templates/about.html
+++ b/mitx/lms/templates/static_templates/about.html
@@ -21,7 +21,7 @@
                 <p>You will be able to keep track of your own progress in the course. The Open Learning Library does not include discussion forums, certificates, or the ability to transfer your progress to <a href="https://www.edx.org/" target="_blank">edX.org</a>. For those hoping to participate in a discussion or seeking a credential for completing a course, we will do our best to highlight when a credential-bearing offering is available on <a href="https://www.edx.org/" target="_blank">edX.org</a>.</p>
                 <p>You’ve discovered us during our prototype phase. We hope you’ll come along for this journey.  Over time, we will add new courses, develop site features, and enhance the user experience.  We welcome your feedback on the site, including your thoughts on areas for improvement.  Please email <a class="link-email" href="mailto:&#109;&#105;&#116;&#111;&#108;&#108;&#045;&#115;&#117;&#112;&#112;&#111;&#114;&#116;&#064;&#109;&#105;&#116;&#046;&#101;&#100;&#117;">&#109;&#105;&#116;&#111;&#108;&#108;&#045;&#115;&#117;&#112;&#112;&#111;&#114;&#116;&#064;&#109;&#105;&#116;&#046;&#101;&#100;&#117;</a> with your feedback or any requests for support.</p>
 
-                <section class="faq-section">
+                <section id="faq-section">
                     <h3 class="section-title">Frequently Asked Questions</h3>
                     <button id="btn_expand_faqs" class="btn btn-outline-primary">Expand All</button>
                     <button id="btn_minimise_faqs" class="btn btn-outline-primary">Minimise All</button>
