--- a/mitx/lms/static/sass/shared-v2/_footer.scss
+++ b/mitx/lms/static/sass/shared-v2/_footer.scss
@@ -132,8 +132,10 @@
         	.copyright {
                 color: $white;
         		font-size: 13px;
+                font-family: $font-family-sans-serif;
         		letter-spacing: 0.8px;
         		margin: 0;
+                max-width: 100%;
         		@include media-up(sm) {
         			@include float(right);
         		}
