--- a/mitx/lms/static/sass/views/_about.scss
+++ b/mitx/lms/static/sass/views/_about.scss
@@ -1,7 +1,7 @@
 // =================================
 // lms - views - About
 // =================================
-.page-banner {
+.page-hero-banner {
     background-image: url('#{$static-path}/images/banner-about-page.jpg');
     background-size: cover;
     background-position: 50% 50%;
