--- a/mitx/lms/templates/ace_common/edx_ace/common/base_body.html
+++ b/mitx/lms/templates/ace_common/edx_ace/common/base_body.html
@@ -59,7 +59,7 @@
                     <tr>
                         <td width="70">
                             <a href="{% with_link_tracking homepage_url %}">
-                                <img src="https://staging.mitx.edly.io/static/mitx/images/banner-about-page.jpg" width="260" height="33" alt="{% blocktrans %} {{ platform_name }} Home Page{% endblocktrans %}"/>
+                                <img src="https://openlearninglibrary.mit.edu/static/mitx/images/logo.png" width="260" height="33" alt="{% blocktrans %} {{ platform_name }} Home Page{% endblocktrans %}"/>
                             </a>
                         </td>
                         <td align="right" style="text-align: {{ LANGUAGE_BIDI|yesno:"left,right" }};">
