--- a/mitx/lms/templates/static_templates/about.html
+++ b/mitx/lms/templates/static_templates/about.html
@@ -4,7 +4,7 @@
 
 <%block name="pagetitle">${_("About")}</%block>
 
-<section class="page-banner">
+<section class="page-hero-banner">
     <div class="container">
         <div class="row">
             <div class="col"><h1>${_("About the MIT Open Learning Library")}</h1></div>
