--- a/mitx/lms/templates/static_templates/contact.html
+++ b/mitx/lms/templates/static_templates/contact.html
@@ -5,7 +5,7 @@
 
 <%block name="pagetitle">${_("Contact")}</%block>
 
-<section class="page-banner contact-page-banner">
+<section class="page-hero-banner contact-page-banner">
     <div class="container">
         <div class="row">
             <div class="col"><h1>${_("Contact Us")}</h1></div>
