--- a/mitx/lms/templates/main.html
+++ b/mitx/lms/templates/main.html
@@ -209,6 +209,7 @@ from pipeline_mako import render_require_js_path_overrides
   <script type="text/javascript" src="${static.url('js/login-register.js')}" charset="utf-8"></script>
   <script type="text/javascript" src="${static.url('js/accordion.js')}" charset="utf-8"></script>
   <script type="text/javascript" src="${static.url('js/smooth-scroll.js')}" charset="utf-8"></script>
+  <script type="text/javascript" src="${static.url('js/common-scripts.js')}" charset="utf-8"></script>
   <%static:optional_include_mako file="body-extra.html" is_theming_enabled="True" />
 </body>
 </html>
