Forgot password box styling hot fixes.

--- a/mitx/lms/static/sass/course/layout/_courseware_preview.scss
+++ b/mitx/lms/static/sass/course/layout/_courseware_preview.scss
@@ -45,6 +45,7 @@
 .navbar,
 .wiki,
 .progress,
+.wrapper-course-material,
 .courseware.wrapper-course-material,
 .instructor {
     max-width: $container-default;
