Monday cosmatic changes

--- a/mitx/lms/static/sass/_overrides.scss
+++ b/mitx/lms/static/sass/_overrides.scss
@@ -83,6 +83,19 @@
     margin-top: 0 !important;
 }
 
+.course-sidebar {
+
+    .section-dates {
+
+        .date-summary-end-date {
+
+            .description {
+                display: none !important;
+            }
+        }
+    }
+}
+
 // ------------------------------
 // #SHAME
 // ------------------------------
