--- a/mitx/lms/static/sass/shared-v2/_header.scss
+++ b/mitx/lms/static/sass/shared-v2/_header.scss
@@ -44,6 +44,40 @@
                         @include padding($baseline*0.2, 0, $baseline*0.5, 0);
                     }
                 }
+
+                &.custom-nav {
+                    padding: 0;
+                    list-style: none;
+                    font-size: 0; //to remove white space between inline HTML elements, and child must have font-size
+                    @include margin-left(0);
+                    @include media-up(md) {
+                        display: inline-block;
+                    }
+                    @include media-up(lg) {
+                        @include margin-right($baseline*0.8);
+                    }
+
+                    li {
+                        display: inline-block;
+                        margin: 0;
+                        @include padding($baseline*0.25, $baseline*0.6, $baseline*0.25, $baseline*0.6);
+                        @include media-up(md) {
+                            @include padding($baseline*0.25, $baseline*1.1, $baseline*0.25, $baseline*1.1);
+                        }
+
+                        a:not(.btn),
+                        a {
+                            color: $charcoal-gray;
+                            font-size: $baseline;
+                            text-decoration: none;
+                            @include padding($baseline*0.5, 0, $baseline*0.5, 0);
+
+                            &:hover {
+                                color: $primary;
+                            }
+                        }
+                    }
+                }
             }
         }
 
