--- a/mitx/lms/templates/header/navbar-authenticated.html
+++ b/mitx/lms/templates/header/navbar-authenticated.html
@@ -59,12 +59,11 @@ from openedx.core.djangoapps.site_configuration import helpers as configuration_
       </div>
     % endif
     % if show_explore_courses:
-      <div class="mobile-nav-item hidden-mobile nav-item nav-tab">
-          <a class="tab-nav-link" href="${marketing_link('COURSES')}"
-             aria-current="${'page' if '/courses' in request.path else 'false'}">
-             ${_('Discover New')}
-          </a>
-      </div>
+      <ul class="custom-nav mobile-nav-item hidden-mobile nav-item">
+          <li><a href="${marketing_link('COURSES')}">${_("Courses")}</a></li>
+          <li><a href="${marketing_link('ABOUT')}">${_("About")}</a></li>
+          <li><a href="${marketing_link('CONTACT')}">${_("Contact")}</a></li>
+      </ul>
     % endif
     % if show_sysadmin_dashboard:
       <div class="mobile-nav-item hidden-mobile nav-item nav-tab">
