--- a/mitx/lms/templates/header/navbar-authenticated.html
+++ b/mitx/lms/templates/header/navbar-authenticated.html
@@ -58,13 +58,15 @@ from openedx.core.djangoapps.site_configuration import helpers as configuration_
           </a>
       </div>
     % endif
-    % if show_explore_courses:
-      <ul class="custom-nav mobile-nav-item hidden-mobile nav-item">
-          <li><a href="${marketing_link('COURSES')}">${_("Courses")}</a></li>
-          <li><a href="${marketing_link('ABOUT')}">${_("About")}</a></li>
-          <li><a href="${marketing_link('CONTACT')}">${_("Contact")}</a></li>
-      </ul>
-    % endif
+    <div class="mobile-nav-item hidden-mobile nav-item nav-tab">
+      <a class="tab-nav-link" href="${marketing_link('COURSES')}">${_("Courses")}</a>
+    </div>
+    <div class="mobile-nav-item hidden-mobile nav-item nav-tab">
+      <a class="tab-nav-link" href="${marketing_link('ABOUT')}">${_("About")}</a>
+    </div>
+    <div class="mobile-nav-item hidden-mobile nav-item nav-tab">
+      <a class="tab-nav-link" href="${marketing_link('CONTACT')}">${_("Contact")}</a>
+    </div>
     % if show_sysadmin_dashboard:
       <div class="mobile-nav-item hidden-mobile nav-item nav-tab">
         ## Translators: This is short for "System administration".
