--- a/mitx/lms/static/sass/shared-v2/_header.scss
+++ b/mitx/lms/static/sass/shared-v2/_header.scss
@@ -26,22 +26,29 @@
                 @include margin(0, 0, 0, $baseline);
             }
             @include media-up(xl) {
-                @include margin(0, 0, 0, $baseline*4);
+                @include margin(0, 0, 0, $baseline*2.5);
             }
 
             .nav-item {
 
                 &.nav-tab {
                     @include padding(0, $baseline*0.75, 0, $baseline*0.75);
+                    @include media-up(md) {
+                        font-size: 16px;
+                        @include padding(0, $baseline*0.5, 0, $baseline*0.5);
+                    }
                     @include media-up(lg) {
                         font-size: 20px;
-                        @include padding(0, $baseline, 0, $baseline);
+                        @include padding(0, $baseline*0.75, 0, $baseline*0.75);
                     }
 
                     .tab-nav-link {
                         border-width: 2px;
                         color: $charcoal-gray;
-                        @include padding($baseline*0.2, 0, $baseline*0.5, 0);
+                        @include padding($baseline*0.25, 0, $baseline*0.5, 0);
+                        @include media-between(md, lg) {
+                            @include padding($baseline*0.45, 0, $baseline*0.5, 0);
+                        }
                     }
                 }
             }
@@ -57,6 +64,12 @@
                 .help-link {
                     font-size: 20px;
                     color: $light-gray-blue;
+                    @include media-up(md) {
+                        font-size: 18px;
+                    }
+                    @include media-up(lg) {
+                        font-size: 20px;
+                    }
 
                     &:hover {
                         color: $primary;
@@ -81,8 +94,14 @@
                             color: $primary;
                             font-family: $font-roboto;
                             font-weight: 500;
-                            @include ellipsis(150px);
-                            @include margin-right($baseline*1.3);
+                            @include margin-right($baseline*0.5);
+                            @include media-up(md) {
+                                @include ellipsis(120px);
+                            }
+                            @include media-up(lg) {
+                                @include ellipsis(150px);
+                                @include margin-right($baseline*1.3);
+                            }
                         }
 
                         .user-image-frame {
