Change link color

--- a/mitx/lms/static/sass/partials/lms/theme/_variables.scss
+++ b/mitx/lms/static/sass/partials/lms/theme/_variables.scss
@@ -31,6 +31,7 @@ $deep-sky-blue:         $secondary;
 $gray-mid:              #b0b0b0;
 $gray-lightest:         #f2f2f2;
 $gray-pale:             #f4f6fa;
+$light-gray:            #70787C;
 $light-gray-blue:       #b0bec5;
 $charcoal-gray:         #37474f;
 $navy:                  #03152d;
