--- a/mitx/lms/templates/footer.html
+++ b/mitx/lms/templates/footer.html
@@ -48,6 +48,11 @@
       % endif
 
     </div>
+
+    <div class="wcag-logo">
+      <img  class="WCAG" src="${static.url('images/wcag2AA-blue-v.svg')}" alt="${_('wcag2AA-blue-v')}" />
+    </div>
+
   </footer>
 
   <footer id="footer-bottom">
