--- a/mitx/lms/static/sass/shared-v2/_footer.scss
+++ b/mitx/lms/static/sass/shared-v2/_footer.scss
@@ -16,18 +16,17 @@
 
         &#footer-openedx {
             max-width: $container-default;
-            @include padding-left( ($baseline*0.75) );
-            @include padding-right( ($baseline*0.75) );
+            @include padding(0, $baseline*0.75, $baseline*1.5, $baseline*0.75);
 
             .colophon {
             	margin: 0;
+                @include media-down(sm) {
+                    width: 100%;
+                }
 
             	.nav-colophon {
                     width: 100%;
-            		@include margin(0, 0, $baseline*2, 0);
-                    @include media-up(md) {
-                        @include margin(0, 0, $baseline*4.5, 0);
-                    }
+            		@include margin(0, 0, $baseline, 0);
 
             		ol,
             		ul {
@@ -72,6 +71,15 @@
             			}
             		}
             	}
+            }
+
+            .wcag-logo {
+                @include media-up(sm) {
+                    align-self: flex-end;
+                    flex: auto;
+                    @include text-align(right);
+                    margin-bottom: $baseline;
+                }
             }
         }
 
