--- a/mitx/lms/static/sass/course/_course-about.scss
+++ b/mitx/lms/static/sass/course/_course-about.scss
@@ -66,6 +66,8 @@
 
                             a {
                                 display: inline-block;
+                                margin: 0 1rem 1rem 0;
+                                vertical-align: top;
                                 @include clearfix;
 
                                 strong {
