--- a/mitx/lms/templates/header/navbar-authenticated.html
+++ b/mitx/lms/templates/header/navbar-authenticated.html
@@ -28,13 +28,13 @@ from openedx.core.djangoapps.site_configuration import helpers as configuration_
 
 <div class="nav-links">
   <div class="main">
+    <div class="mobile-nav-item hidden-mobile nav-item nav-tab">
+      <a class="${'active ' if reverse('dashboard') == request.path else ''}tab-nav-link" href="${reverse('dashboard')}"
+            aria-current="${'page' if reverse('dashboard') == request.path else 'false'}">
+            ${_("My Courses")}
+      </a>
+    </div>
     % if show_dashboard_tabs:
-      <div class="mobile-nav-item hidden-mobile nav-item nav-tab">
-        <a class="${'active ' if reverse('dashboard') == request.path else ''}tab-nav-link" href="${reverse('dashboard')}"
-             aria-current="${'page' if reverse('dashboard') == request.path else 'false'}">
-             ${_("My Courses")}
-        </a>
-      </div>
       % if show_program_listing:
         <div class="mobile-nav-item hidden-mobile nav-item nav-tab">
           <a class="${'active ' if reverse('program_listing_view') in request.path else ''}tab-nav-link" href="${reverse('program_listing_view')}"
@@ -59,7 +59,7 @@ from openedx.core.djangoapps.site_configuration import helpers as configuration_
       </div>
     % endif
     <div class="mobile-nav-item hidden-mobile nav-item nav-tab">
-      <a class="tab-nav-link" href="${marketing_link('COURSES')}">${_("Courses")}</a>
+      <a class="tab-nav-link" href="${marketing_link('COURSES')}">${_("All Courses")}</a>
     </div>
     <div class="mobile-nav-item hidden-mobile nav-item nav-tab">
       <a class="tab-nav-link" href="${marketing_link('ABOUT')}">${_("About")}</a>
