Update "courses" text for non authenticated navbar"

--- a/mitx/lms/templates/header/navbar-not-authenticated.html
+++ b/mitx/lms/templates/header/navbar-not-authenticated.html
@@ -23,7 +23,7 @@ from six import text_type
   <div class="secondary">
     <div>
       <ul class="custom-nav mobile-nav-item hidden-mobile nav-item">
-          <li><a href="${marketing_link('COURSES')}">${_("Courses")}</a></li>
+          <li><a href="${marketing_link('COURSES')}">${_("All Courses")}</a></li>
           <li><a href="${marketing_link('ABOUT')}">${_("About")}</a></li>
           <li><a href="${marketing_link('CONTACT')}">${_("Contact")}</a></li>
       </ul>
