--- a/mitx/lms/templates/courseware/course_about.html
+++ b/mitx/lms/templates/courseware/course_about.html
@@ -176,7 +176,10 @@ from six import string_types, text_type
           <div id="register_error"></div>
         %else:
           %if allow_anonymous and show_courseware_link:
-            <a href="${course_target}">
+            <a
+              title="View the course as an anonymous user. Some content will be unavailable and progress will not be tracked."
+              data-toggle='tooltip'
+              href="${course_target}">
             <strong>${_("View Course")}</strong>
             </a>
           % endif
@@ -191,7 +194,12 @@ from six import string_types, text_type
             else:
               href_class = "register"
           %>
-          <a href="${reg_href}" class="${href_class}">
+          <a
+            href="${reg_href}"
+            class="${href_class}"
+            data-toggle="tooltip"
+            title="Enroll in the course to take advantage of advanced assessments and keep track of course progress."
+          >
             ${_("Enroll to Get Started")}
           </a>
           <div id="register_error"></div>
