--- a/mitx/lms/templates/static_templates/about.html
+++ b/mitx/lms/templates/static_templates/about.html
@@ -54,7 +54,7 @@
                         <div class="item">
                             <div class="accordion-title">Do I have to create an account to access courses?</div>
                             <div class="accordion-content">
-                                <p>Yes. We are using the <a href="https://open.edx.org/" target="_blank">Open edX platform</a> for running course content on the Open Learning Library. Your account will allow you to keep track of your progress as you work your way through a course and to see the answers you’ve submitted to problems within the course.</p>
+                                <p>It depends. We are using the <a href="https://open.edx.org/" target="_blank">Open edX platform</a> for running course content on the Open Learning Library. Creating an account will allow you to access all courses, keep track of your progress, and see the answers you have submitted within the course. If you do not wish to create an account, we do offer several courses that do not require an account/registration but your course progress will not be tracked. </p>
                             </div>
                         </div>
                         <div class="item">
