view course button  hover text changed

--- a/mitx/lms/templates/courseware/course_about.html
+++ b/mitx/lms/templates/courseware/course_about.html
@@ -178,7 +178,7 @@ from six import string_types, text_type
             <a href="${course_target}">
               <strong>${_("View Course")}</strong>
             </a>
-            <span class="tooltip">View the course as an anonymous user. Some content will be unavailable and progress will not be tracked.</span>
+            <span class="tooltip">View the course as an anonymous user. Your progress will not be tracked, and some content may not be available.</span>
           </div>
 
           % endif
