--- a/mitx/lms/templates/footer.html
+++ b/mitx/lms/templates/footer.html
@@ -25,6 +25,7 @@
         <ol>
           <li class="list-title">${_("Open Learning Library")}</li>
           <li><a href="${marketing_link('ABOUT')}">${_("About")}</a></li>
+          <li><a href="https://accessibility.mit.edu/">${_("Accessibility")}</a></li>
           <li><a href="${marketing_link('COURSES')}">${_("All Courses")}</a></li>
           <li><a target="_blank" href="${marketing_link('DONATE')}">${_("Donate")}</a></li>
           <li><a href="mailto:&#109;&#105;&#116;&#111;&#108;&#108;&#045;&#115;&#117;&#112;&#112;&#111;&#114;&#116;&#064;&#109;&#105;&#116;&#046;&#101;&#100;&#117;">${_("Help")}</a></li>
