--- a/mitx/lms/templates/static_templates/about.html
+++ b/mitx/lms/templates/static_templates/about.html
@@ -27,6 +27,12 @@
                     <button id="btn_minimise_faqs" class="btn btn-outline-primary">Minimise All</button>
 
                     <div class="accordion">
+                       <div class="item">
+                            <div class="accordion-title">I did not receive my activation email, what do I do?</div>
+                            <div class="accordion-content">
+                                <p>Please check your SPAM and/or Junk folders to see if the activation email has been flagged as junk. If the email is not there, please visit <a href="https://openlearninglibrary.mit.edu/login">the login page</a> and use the 'forgot password' link to resend the email. If you still do not receive the email, please contact our support staff at <a href="mailto:mitoll-support@mit.edu">mitoll-support@mit.edu</a>.</p>
+                            </div>
+                        </div>
                         <div class="item">
                             <div class="accordion-title">Do I have to pay for access to any part of the site?</div>
                             <div class="accordion-content">
