--- a/mitx/lms/templates/static_templates/about.html
+++ b/mitx/lms/templates/static_templates/about.html
@@ -30,7 +30,7 @@
                        <div class="item">
                             <div class="accordion-title">I did not receive my activation email, what do I do?</div>
                             <div class="accordion-content">
-                                <p>Please check your SPAM and/or Junk folders to see if the activation email has been flagged as junk. If the email is not there, please visit <a href="https://openlearninglibrary.mit.edu/login">the login page</a> and use the 'forgot password' link to resend the activation email. If you still do not receive the email, please contact our support staff at <a href="mailto:mitoll-support@mit.edu">mitoll-support@mit.edu</a>.</p>
+                                <p>Please check your SPAM and/or Junk folders to see if the activation email has been flagged as junk. If the email is not there, please visit <a href="https://openlearninglibrary.mit.edu/login">the login page</a> and use the 'forgot password' link to resend the activation email. If you still do not receive the email, please contact our support team at <a class="link-email" href="mailto:&#109;&#105;&#116;&#111;&#108;&#108;&#045;&#115;&#117;&#112;&#112;&#111;&#114;&#116;&#064;&#109;&#105;&#116;&#046;&#101;&#100;&#117;">&#109;&#105;&#116;&#111;&#108;&#108;&#045;&#115;&#117;&#112;&#112;&#111;&#114;&#116;&#064;&#109;&#105;&#116;&#046;&#101;&#100;&#117;</a>.</p>
                             </div>
                         </div>
                         <div class="item">
