--- a/mitx/lms/templates/static_templates/contact.html
+++ b/mitx/lms/templates/static_templates/contact.html
@@ -15,8 +15,7 @@
 
 <main id="main" aria-label="Content" tabindex="-1">
     <section class="container contact-page-content">
-        <p>Find answers to your questions.
-            <a href="mailto:&#109;&#105;&#116;&#111;&#108;&#108;&#045;&#115;&#117;&#112;&#112;&#111;&#114;&#116;&#064;&#109;&#105;&#116;&#046;&#101;&#100;&#117;">Contact our Help Center</a>
+        <p>Find answers to your questions in our <a href="/about#faq-section">FAQ section<a>.
         </p>
         <hr class="mtb-40">
         <p>Sign in to MIT Open Learning Library so we can help you better.</p>
@@ -26,8 +25,7 @@
             <a href="/register${login_query()}" class="btn">${_("Create an MIT Open Learning Library account")}</a>
             </%block>
         </div>
-        <p>If you are unable to access your account contact us via
-            <a href="mailto:&#109;&#105;&#116;&#111;&#108;&#108;&#045;&#115;&#117;&#112;&#112;&#111;&#114;&#116;&#064;&#109;&#105;&#116;&#046;&#101;&#100;&#117;">email</a>.
+        <p>If you did not receive your activation email or are unable to access your account, please refer to our <a href="/about#faq-section">FAQs<a>.
         </p>
     </section>
 </main>
