--- a/mitx/lms/templates/dashboard/_dashboard_course_listing.html
+++ b/mitx/lms/templates/dashboard/_dashboard_course_listing.html
@@ -1,8 +1,9 @@
 <%page args="course_overview, enrollment, entitlement, entitlement_session, course_card_index, is_unfulfilled_entitlement, is_fulfilled_entitlement, entitlement_available_sessions, entitlement_expiration_date, entitlement_expired_at, show_courseware_link, cert_status, can_refund_entitlement, can_unenroll, credit_status, show_email_settings, course_mode_info, is_paid_course, is_course_blocked, verification_status, course_requirements, dashboard_index, share_settings, related_programs, display_course_modes_on_dashboard, show_consent_link, enterprise_customer_name, resume_button_url" expression_filter="h"/>
 
 <%!
-import urllib
+import six
 
+from django.utils.http import urlencode, urlquote_plus
 from django.utils.translation import ugettext as _
 from django.utils.translation import ungettext
 from django.urls import reverse
@@ -62,7 +63,7 @@ from util.course import get_link_for_about_page, get_encoded_course_sharing_utm_
         % endif
       >
 <article class="course${mode_class}" aria-labelledby="course-title-${enrollment.course_id}" id="course-card-${course_card_index}">
-  <% course_target = reverse(course_home_url_name(course_overview.id), args=[unicode(course_overview.id)]) %>
+  <% course_target = reverse(course_home_url_name(course_overview.id), args=[six.text_type(course_overview.id)]) %>
   <section class="details" aria-labelledby="details-heading-${enrollment.course_id}">
       <h2 class="hd hd-2 sr" id="details-heading-${enrollment.course_id}">${_('Course details')}</h2>
     <div class="wrapper-course-image" aria-hidden="true">
@@ -107,6 +108,7 @@ from util.course import get_link_for_about_page, get_encoded_course_sharing_utm_
           <span class="info-university">${course_overview.display_org_with_default} - </span>
           <span class="info-course-id">${course_overview.display_number_with_default}</span>
           <%
+            enrollment_date = course_overview.self_paced and enrollment and enrollment.created
             if course_overview.start_date_is_still_default:
                 container_string = _("Coming Soon")
                 course_date = None
@@ -117,7 +119,7 @@ from util.course import get_link_for_about_page, get_encoded_course_sharing_utm_
                     course_date = course_overview.end
                 elif course_overview.has_started():
                     container_string = _("Started - {date}")
-                    course_date = course_overview.dashboard_start_display
+                    course_date = enrollment_date or course_overview.dashboard_start_display
                 elif course_overview.starts_within(days=5):
                     container_string = _("Starts - {date}")
                     course_date = course_overview.dashboard_start_display
@@ -149,7 +151,7 @@ from util.course import get_link_for_about_page, get_encoded_course_sharing_utm_
                         % endif
                     </span>
                 % else:
-                    % if isinstance(course_date, basestring):
+                    % if isinstance(course_date, six.string_types):
                         <span class="info-date-block">${container_string.format(date=course_date)}</span>
                     % elif course_date is not None:
                         <span class="info-date-block localized-datetime" data-language="${user_language}" data-timezone="${user_timezone}" data-datetime="${course_date.strftime('%Y-%m-%dT%H:%M:%S%z')}" data-format=${format} data-string="${container_string}"></span>
@@ -235,6 +237,7 @@ from util.course import get_link_for_about_page, get_encoded_course_sharing_utm_
                           data-trigger="focus hover"
                           class="action action-facebook"
                           href="${facebook_url}"
+                          rel="noopener"
                           target="_blank"
                           title="${_('Share on Facebook')}"
                           data-course-id="${course_overview.id}"
@@ -256,6 +259,7 @@ from util.course import get_link_for_about_page, get_encoded_course_sharing_utm_
                           data-trigger="focus hover"
                           class="action action-twitter"
                           href="${twitter_url}"
+                          rel="noopener"
                           target="_blank"
                           title="${_('Share on Twitter')}"
                           data-course-id="${course_overview.id}"
@@ -285,7 +289,7 @@ from util.course import get_link_for_about_page, get_encoded_course_sharing_utm_
                     <ul class="actions-dropdown-list" id="actions-dropdown-list-${dashboard_index}" aria-label="${_('Available Actions')}" role="menu">
                       % if can_unenroll:
                         <li class="actions-item" id="actions-item-unenroll-${dashboard_index}" role="menuitem">
-                          <% course_refund_url = reverse('course_run_refund_status', args=[unicode(course_overview.id)]) %>
+                          <% course_refund_url = reverse('course_run_refund_status', args=[six.text_type(course_overview.id)]) %>
                               % if not is_course_blocked:
                               <a href="#unenroll-modal" class="action action-unenroll" rel="leanModal"
                                  data-course-id="${course_overview.id}"
@@ -425,7 +429,7 @@ from util.course import get_link_for_about_page, get_encoded_course_sharing_utm_
                 % endif
               </div>
               <div class="verification-cta">
-                <a href="${reverse('verify_student_verify_now', kwargs={'course_id': unicode(course_overview.id)})}" class="btn" data-course-id="${course_overview.id}">${_('Verify Now')}</a>
+                <a href="${reverse('verify_student_verify_now', kwargs={'course_id': six.text_type(course_overview.id)})}" class="btn" data-course-id="${course_overview.id}">${_('Verify Now')}</a>
               </div>
             % elif verification_status['status'] == VERIFY_STATUS_SUBMITTED:
               <h4 class="message-title">${_('You have submitted your verification information.')}</h4>
@@ -475,7 +479,7 @@ from util.course import get_link_for_about_page, get_encoded_course_sharing_utm_
                 % if use_ecommerce_payment_flow and course_mode_info['verified_sku']:
                   <a class="action action-upgrade" href="${ecommerce_payment_page}?sku=${course_mode_info['verified_sku']}">
                 % else:
-                  <a class="action action-upgrade" href="${reverse('verify_student_upgrade_and_verify', kwargs={'course_id': unicode(course_overview.id)})}" data-course-id="${course_overview.id}" data-user="${user.username}">
+                  <a class="action action-upgrade" href="${reverse('verify_student_upgrade_and_verify', kwargs={'course_id': six.text_type(course_overview.id)})}" data-course-id="${course_overview.id}" data-user="${user.username}">
                 % endif
                     <span class="action-upgrade-icon" aria-hidden="true"></span>
                   <span class="wrapper-copy">
@@ -491,7 +495,7 @@ from util.course import get_link_for_about_page, get_encoded_course_sharing_utm_
 
         % if course_requirements:
         ## Multiple pre-requisite courses are not supported on frontend that's why we are pulling first element
-        <% prc_target = reverse('about_course', args=[unicode(course_requirements['courses'][0]['key'])]) %>
+        <% prc_target = reverse('about_course', args=[six.text_type(course_requirements['courses'][0]['key'])]) %>
         <div class="prerequisites">
           <p class="tip">
             ${Text(_("You must successfully complete {link_start}{prc_display}{link_end} before you begin this course.")).format(
