--- a/mitx/lms/templates/main.html
+++ b/mitx/lms/templates/main.html
@@ -23,7 +23,7 @@ from openedx.core.djangolib.js_utils import dump_js_escaped_json, js_escaped_str
 from openedx.core.release import RELEASE_LINE
 from pipeline_mako import render_require_js_path_overrides
 
-from courseware.courses import get_course_about_section
+from lms.djangoapps.courseware.courses import get_course_about_section
 from openedx.core.lib.courses import course_image_url
 
 %>
@@ -140,7 +140,7 @@ from openedx.core.lib.courses import course_image_url
   <%block name="head_extra"/>
 
   <%include file="/courseware/experiments.html"/>
-  <%include file="user_metadata.html"/>
+  <%include file="/experiments/user_metadata.html"/>
   <%static:optional_include_mako file="head-extra.html" is_theming_enabled="True" />
 
   <%include file="widgets/optimizely.html" />
