EDE-1003 Contact page should hide Register/Login button when user is logged in

--- a/mitx/lms/templates/static_templates/contact.html
+++ b/mitx/lms/templates/static_templates/contact.html
@@ -15,7 +15,7 @@
 
 <main id="main" aria-label="Content" tabindex="-1">
     <section class="container contact-page-content">
-        <p>Find answers to your questions in our <a href="/about#faq-section">FAQ section<a>.
+        <p>Find answers to your questions in our <a href="/about#faq-section">FAQ section</a>.
         </p>
         % if not user.is_authenticated:
             <hr class="mtb-40">
@@ -27,7 +27,7 @@
             </%block>
             </div>
         % endif
-        <p>If you did not receive your activation email or are unable to access your account, please refer to our <a href="/about#faq-section">FAQs<a>.
+        <p>If you did not receive your activation email or are unable to access your account, please refer to our <a href="/about#faq-section">FAQs</a>.
         </p>
     </section>
 </main>
