Anchor links are not working on Mozilla

--- a/mitx/lms/templates/static_templates/about.html
+++ b/mitx/lms/templates/static_templates/about.html
@@ -3,6 +3,7 @@
 <%inherit file="../main.html" />
 
 <%block name="pagetitle">${_("About")}</%block>
+<%block name='bodyclass'>auto-height</%block>
 
 <section class="page-hero-banner">
     <div class="container">
