Studio library button fixes

--- a/mitx/cms/static/sass/partials/cms/theme/_extras.scss
+++ b/mitx/cms/static/sass/partials/cms/theme/_extras.scss
@@ -12,7 +12,23 @@
         &.has-navigation {
 
             .nav-actions {
-                top: 0;
+
+                .view-library & {
+                    top: 0;
+                }
+            }
+        }
+    }
+}
+
+.maintenance-content {
+
+    .maintenance-form {
+
+        .form-create {
+
+            .actions {
+                margin-top: 0;
             }
         }
     }
