Updatd import order for course_about html file

--- a/mitx/lms/templates/courseware/course_about.html
+++ b/mitx/lms/templates/courseware/course_about.html
@@ -2,19 +2,22 @@
 <%namespace name='static' file='../static_content.html'/>
 <%!
 from math import ceil
-from django.utils.translation import ugettext as _
-from django.utils.translation import pgettext
-from django.urls import reverse
-from lms.djangoapps.courseware.courses import get_course_about_section
-from openedx.core.djangoapps.content.course_overviews.models import CourseOverview
+
+from six import string_types, text_type
+
 from django.conf import settings
-from six import text_type
-from opaque_keys.edx.keys import CourseKey
+from django.urls import reverse
+from django.utils.translation import pgettext
+from django.utils.translation import ugettext as _
 from edxmako.shortcuts import marketing_link
+from lms.djangoapps.courseware.courses import get_course_about_section
+from opaque_keys.edx.keys import CourseKey
+from openedx.core.djangoapps.content.course_overviews.models import \
+    CourseOverview
 from openedx.core.djangolib.js_utils import js_escaped_string
 from openedx.core.djangolib.markup import HTML, Text
 from openedx.core.lib.courses import course_image_url
-from six import string_types, text_type
+
 %>
 
 <%inherit file="../main.html" />
