change theme to latest release of koa

--- a/mitx/lms/static/sass/partials/lms/theme/_variables.scss
+++ b/mitx/lms/static/sass/partials/lms/theme/_variables.scss
@@ -65,4 +65,8 @@ $instagram:                  #517FA4;
 
 // Misc.
 $border-radius:         4px;
+$baseline:              20px;
 $container-default:     1170px;
+
+$btn-disabled-background-color: #b0b0b0;
+$btn-disabled-text-color: #ccc;
