--- a/mitx/lms/static/sass/views/_login-register.scss
+++ b/mitx/lms/static/sass/views/_login-register.scss
@@ -9,6 +9,7 @@
         background-color: $navy;
         background-position: center center;
         background-repeat: no-repeat;
+        width: 100%;
 
         &:after {
             content: '';
