--- a/mitx/lms/static/sass/lms-main.scss
+++ b/mitx/lms/static/sass/lms-main.scss
@@ -5,15 +5,11 @@
 // NOTE: This is the left-to-right (LTR) configured style compile.
 // It should mirror lms-main-v2-rtl w/ the exception of bi-app references.
 
-
-// Load the RTL version of the edX Pattern Library
-$pattern-library-path: '../../edx-pattern-library' !default;
-@import 'edx-pattern-library/pattern-library/sass/edx-pattern-library-ltr';
-
-// Load the shared build
-@import 'build-lms-v2';
-
 // Additional sass rules that must come at the end of the compilation for overriding purposes
+@import 'build-base-v1';
+@import 'build-lms-v1'; // shared app style assets/rendering
+
+@import 'partials/lms/theme/variables';
 @import 'overrides';
 
 // ------------------------------
