Style fixes for KOA upgradation

--- a/mitx/lms/templates/header.html
+++ b/mitx/lms/templates/header.html
@@ -14,4 +14,5 @@ this file from your theme's repository.
 <link href="https://fonts.googleapis.com/css?family=Roboto:400,500|Source+Sans+Pro:300,400,600,700&display=swap" rel="stylesheet"/>
 
 <!-- Stylesheets -->
+<link rel="stylesheet" type="text/css" href="${static.url('css/bootstrap/lms-main.css')}"/>
 <link rel="stylesheet" type="text/css" href="${static.url('css/lms-main.css')}"/>
