added configuration for addthis

--- a/mitx/lms/templates/main.html
+++ b/mitx/lms/templates/main.html
@@ -233,6 +233,7 @@ from openedx.core.lib.courses import course_image_url
   <script type="text/javascript" src="${static.url('js/accordion.js')}" charset="utf-8"></script>
   <script type="text/javascript" src="${static.url('js/smooth-scroll.js')}" charset="utf-8"></script>
   <script type="text/javascript" src="${static.url('js/common-scripts.js')}" charset="utf-8"></script>
+  <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-61fbc86b7d70a953"></script>
   <%static:optional_include_mako file="body-extra.html" is_theming_enabled="True" />
 </body>
 </html>
